@@ -713,6 +713,13 @@ Tools/Demos
 - Issue #25154: The pyvenv script has been deprecated in favour of
   `python3 -m venv`.
 
+C API
+-----
+
+- Issue #26198: ValueError is now raised instead of TypeError on buffer
+  overflow in parsing "es#" and "et#" format units.  SystemError is now raised
+  instead of TypeError on programmical error in parsing format string.
+
 
 What's New in Python 3.5.1 final?
 =================================
